overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,11 @@
   --font-title: "Poppins", sans-serif;
 }
 
+main {
+  width: 100%;
+  overflow: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
